<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.AppCompat.FieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_text" />

    <EditText
        android:id="@+id/name_field"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextAppearance.AppCompat.FieldName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_text" />

    <EditText
        android:id="@+id/description_field"
        style="@style/InputTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLines="1"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.AppCompat.FieldName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_text" />

        <Spinner
            android:id="@+id/spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:entries="@array/priority" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_purple"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            style="@style/TextAppearance.AppCompat.FieldName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type_text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/type_field"
                style="@style/InputTextStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/type_button_titile" />

            <Button
                android:id="@+id/types_radio"
                style="@style/Base.Widget.AppCompat.Button.HB"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="❯" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView6"
            style="@style/TextAppearance.AppCompat.FieldName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/counts_text" />

        <CheckBox
            android:id="@+id/period_check_box"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:buttonTint="@color/normal_purple"
            android:checked="true"
            android:gravity="center"
            android:minWidth="50dp"
            android:minHeight="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/counts_field"
            style="@style/InputTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:hint="0"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/period_text"
            style="@style/TextAppearance.AppCompat.SimpleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_per_period_text" />

        <Spinner
            android:id="@+id/deadline_spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Habits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/periods" />
    </LinearLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_gravity="center_horizontal|bottom"
        android:text="✔︎"
        style="@style/Base.Widget.AppCompat.Button.HB"/>
</LinearLayout>
